Min width auto on event image promo images on small screens to fix width bug

--- a/assets/targets/public/event/index.css
+++ b/assets/targets/public/event/index.css
@@ -167,6 +167,7 @@
   .breakpoint-w-599 .event__promo-image img {
     margin-left: 0;
     max-width: 100%;
+    min-width: auto;
     margin-left: auto;
     margin-right: auto;
     max-height: 40rem;
